<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/seasonListFragment">

    <fragment
        android:id="@+id/seasonListFragment"
        android:name="com.ufs.csiq6823.SeasonListFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_seasonList_to_playList"
            app:destination="@id/playListFragment" />
        <action
            android:id="@+id/action_seasonList_to_addPlayer"
            app:destination="@id/addPlayerFragment" />
        <action
            android:id="@+id/action_seasonList_to_newWeek"
            app:destination="@id/newWeekFragment" />

        <action
            android:id="@+id/action_seasonList_to_players"
            app:destination="@id/playersFragment" />

    </fragment>

    <fragment
        android:id="@+id/playListFragment"
        android:name="com.ufs.csiq6823.PlayListFragment"
        android:label="@string/title_play_list">
        <argument
            android:name="weekTitle"
            app:argType="string" />
        <argument
            android:name="dateLabel"
            app:argType="string" />
        <action
            android:id="@+id/action_playList_to_addGame"
            app:destination="@id/addGameFragment" />
        <action
            android:id="@+id/action_playList_to_gameDetails"
            app:destination="@id/gameDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addPlayerFragment"
        android:name="com.ufs.csiq6823.AddPlayerFragment"
        android:label="@string/title_add_player" />

    <fragment
        android:id="@+id/addGameFragment"
        android:name="com.ufs.csiq6823.AddGameFragment"
        android:label="@string/title_add_game">
        <argument
            android:name="weekTitle"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/gameDetailsFragment"
        android:name="com.ufs.csiq6823.GameDetailsFragment"
        android:label="@string/title_game_details">
        <argument android:name="white" app:argType="string" />
        <argument android:name="black" app:argType="string" />
        <argument android:name="gameId" app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/newWeekFragment"
        android:name="com.ufs.csiq6823.NewWeekFragment"
        android:label="@string/title_new_week" />

    <fragment
        android:id="@+id/playerDetailFragment"
        android:name="com.ufs.csiq6823.PlayerDetailFragment"
        android:label="Player Detail">
        <argument
            android:name="playerId"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/playersFragment"
        android:name="com.ufs.csiq6823.PlayersFragment"
        android:label="@string/title_players">
        <action
            android:id="@+id/action_seasonList_to_addPlayer"
            app:destination="@id/addPlayerFragment" />
    </fragment>


</navigation>
